--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# Project contributors
+# This file lists all individuals having contributed content to the repository.
 
 Ian Culp <ian.culp@holberton.com>
 Lance Burklin <lancewburklin@gmail.com>
